rename `secondIdentitySlot` => `secondIdentitySlotMode` to clarify that it isn't a boolean

--- a/packages/ia-topnav/index.html
+++ b/packages/ia-topnav/index.html
@@ -201,12 +201,12 @@
       /* How to add a second logo next to main one: */
       const showLogo2 = document.querySelector('#show-logo2');
       showLogo2.addEventListener('click', () => {
-        topnav.secondIdentitySlot = 'allow';
+        topnav.secondIdentitySlotMode = 'allow';
       })
 
       const hideLogo2 = document.querySelector('#hide-logo2');
       hideLogo2.addEventListener('click', () => {
-        topnav.secondIdentitySlot = '';
+        topnav.secondIdentitySlotMode = '';
       })
     </script>
   </body>
