--- a/packages/ia-topnav/index.html
+++ b/packages/ia-topnav/index.html
@@ -138,7 +138,7 @@
           uploader: 'bar-uploader@baz.org',
           biblio: 'https://some-url.com',
         });
-        menus.web = baseMenus.wayback;
+        menus.web = baseMenus.web;
         topnav.menus = menus;
       }
 
