Start work hiding the nav menus when they are closed

--- a/packages/ia-topnav/index.html
+++ b/packages/ia-topnav/index.html
@@ -49,6 +49,7 @@
       When passing in a search query through html attributes, base64 encode them.
       This is not needed when setting the search query with lit-element bindings.
     -->
+    <div style="background-color: lightblue; height: 200px;"></div>
     <ia-topnav searchQuery="J2Zvbyc=">
       <div slot="opt-sec-logo">
         <a class="anniv-logo-link" href="https://anniversary.archive.org" title="Go to cool page">
