Fix search menu positioning

--- a/packages/ia-topnav/index.html
+++ b/packages/ia-topnav/index.html
@@ -26,6 +26,10 @@
       dt {
         font-size: 1.4rem;
       }
+      main {
+        padding: 0 2rem;
+        font-size: 1.4rem;
+      }
 
       .anniv-logo-link {
         display: flex;
@@ -60,7 +64,7 @@
       This is not needed when setting the search query with lit-element bindings.
     -->
     <div class="fake-banner"></div>
-    <ia-topnav searchQuery="J2Zvbyc=">
+    <ia-topnav searchQuery="Zm9v">
       <div slot="opt-sec-logo">
         <a class="anniv-logo-link" href="https://anniversary.archive.org" title="Go to cool page">
           <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 114.6 36.87">
