Update activity indicator to lit2

--- a/packages/ia-activity-indicator/demo/index.html
+++ b/packages/ia-activity-indicator/demo/index.html
@@ -24,7 +24,7 @@
   </div>
 
   <script type="module">
-    import { html, render } from 'lit-html';
+    import { html, render } from 'lit';
     import '../ia-activity-indicator.js';
     import { IAActivityIndicatorMode } from '../index.js';
 
