revert script urls

--- a/packages/ia-components/.storybook/preview-head.html
+++ b/packages/ia-components/.storybook/preview-head.html
@@ -1,20 +1,20 @@
 <script src="https://cdn.jwplayer.com/libraries/tv8LZB7u.js"></script>
-<script src="https://www-isa2.archive.org/includes/jquery-1.10.2.min.js?v1.10.2"></script>
-<script src="https://www-isa2.archive.org/includes/build/js/play8.min.js"></script>
+<script src="https://archive.org/includes/jquery-1.10.2.min.js?v1.10.2"></script>
+<script src="https://archive.org/includes/build/js/play8.min.js"></script>
 
 
-<script src="https://www-isa2.archive.org/bookreader/BookReader/BookReader.js"></script>
-<script src="https://www-isa2.archive.org/bookreader/BookReader/plugins/plugin.tts.js"></script>
-<script src="https://www-isa2.archive.org/bookreader/BookReader/plugin.search.js"></script>
+<script src="https://archive.org/bookreader/BookReader/BookReader.js"></script>
+<script src="https://archive.org/bookreader/BookReader/plugins/plugin.tts.js"></script>
+<script src="https://archive.org/bookreader/BookReader/plugin.search.js"></script>
 
-<script src="https://www-isa2.archive.org/bookreader/BookReader/jquery.colorbox-min.js"></script>
+<script src="https://archive.org/bookreader/BookReader/jquery.colorbox-min.js"></script>
 
-<link href="https://www-isa2.archive.org/bookreader/BookReader/BookReader.css" rel="stylesheet" type="text/css"/>
+<link href="https://archive.org/bookreader/BookReader/BookReader.css" rel="stylesheet" type="text/css"/>
 
-<link href="https://www-isa2.archive.org/includes/build/css/archive.min.css" rel="stylesheet" type="text/css"/>
-<link href="https://www-isa2.archive.org/bookreader/BookReader-ia.css" rel="stylesheet" type="text/css"/>
+<link href="https://archive.org/includes/build/css/archive.min.css" rel="stylesheet" type="text/css"/>
+<link href="https://archive.org/bookreader/BookReader-ia.css" rel="stylesheet" type="text/css"/>
 
-<script src="https://www-isa2.archive.org/bookreader/BookReader/ia-bookreader-bundle.js"></script>
+<script src="https://archive.org/bookreader/BookReader/ia-bookreader-bundle.js"></script>
 
 <style>
   html {
