use `<ia-bookreader>` to load bookreader (#624)
* use <ia-bookreader>
* update demo

--- a/packages/ia-components/.storybook/preview-head.html
+++ b/packages/ia-components/.storybook/preview-head.html
@@ -14,7 +14,7 @@
 <link href="https://archive.org/includes/build/css/archive.min.css" rel="stylesheet" type="text/css"/>
 <link href="https://archive.org/bookreader/BookReader-ia.css" rel="stylesheet" type="text/css"/>
 
-<script src="https://archive.org/includes/build/js/BookNavigator.min.js"></script>
+<script src="https://archive.org/bookreader/BookReader/ia-bookreader-bundle.js"></script>
 
 <style>
   html {
