lit 2 + eslint upgrades

--- a/packages/scrubber-bar/demo/index.html
+++ b/packages/scrubber-bar/demo/index.html
@@ -20,7 +20,8 @@
   <div id="demo"></div>
 
   <script type="module">
-    import { html, render } from 'lit-html';
+    /* eslint-disable no-use-before-define */
+    import { html, render } from 'lit';
     import '../index.js';
 
     render(
