lit2 + eslint upgrade

--- a/packages/expandable-search-bar/demo/index.html
+++ b/packages/expandable-search-bar/demo/index.html
@@ -50,7 +50,7 @@
   <div id="demo"></div>
 
   <script type="module">
-    import { html, render } from 'lit-html';
+    import { html, render } from 'lit';
     import '../lib/expandable-search-bar.js';
     import QuickSearchEntry from '../lib/models/quick-search-entry.js';
 
