lit2 + eslint upgrades

--- a/packages/audio-element/demo/index.html
+++ b/packages/audio-element/demo/index.html
@@ -21,7 +21,7 @@
   </style>
 
   <script type="module">
-    import { html, render } from 'lit-html';
+    import { html, render } from 'lit';
     import AudioSource from '../lib/models/audio-source.js';
     import AudioElement from '../lib/audio-element.js';
 
