radio player @ lit2

--- a/packages/radio-player/demo/index.html
+++ b/packages/radio-player/demo/index.html
@@ -38,7 +38,7 @@
   </div>
 
   <script type="module">
-    import { html, render } from 'lit-html';
+    import { html, render } from 'lit';
     import '../lib/demo/radio-player-controller.js';
 
     render(
