--- a/packages/ia-zendesk-help-widget/index.html
+++ b/packages/ia-zendesk-help-widget/index.html
@@ -9,7 +9,7 @@
   <body>
     <div id="root"></div>
     <script type="module">
-      import { html, render } from './node_modules/lit-html/lit-html.js';
+      import { html, render } from './node_modules/lit/index.js';
 
       render(html`<ia-zendesk-help-widget
         widgetSrc="https://static.zdassets.com/ekr/snippet.js?key=685f6dc4-48c5-411f-8463-cc6dd50abe2d"
