ensure WB page count is same everywhere.  upload /create button is fixed (only certain *petabox* pages can later alter via JS for admins)

--- a/packages/ia-topnav/demo.html
+++ b/packages/ia-topnav/demo.html
@@ -29,6 +29,12 @@
 </button>
 
 
+<hr>
+<button onclick="document.querySelector('ia-topnav').setAttribute('waybackPagesArchived', 'many, MAAAANNNY')">
+  change WB pages count
+</button>
+
+
 
 <script type="module" src="./src/ia-topnav.js"></script>
 
