setting up a coderunr docroot

--- a/packages/ia-topnav/www/index.html
+++ b/packages/ia-topnav/www/index.html
@@ -36,6 +36,6 @@
 
 
 
-<script type="module" src="./src/ia-topnav.js"></script>
+<script type="module" src="../src/ia-topnav.js"></script>
 
 </center>
