use browser-based import map so we can load WB dependent pkg

--- a/packages/ia-topnav/www/index.html
+++ b/packages/ia-topnav/www/index.html
@@ -1,5 +1,15 @@
 <link rel="stylesheet" href="https://archive.org/includes/build/css/archive.min.css">
 
+<script type="importmap">
+  {
+    "imports": {
+      "@internetarchive/ia-wayback-searchx": "https://esm.archive.org/@internetarchive/ia-wayback-search",
+      "@internetarchive/ia-wayback-search": "./ia-wayback-search/src/ia-wayback-search.js"
+    }
+  }
+</script>
+
+
 <ia-topnav></ia-topnav>
 
 
