coderunr (inadverent checkin) cleanup/simplify

--- a/www/ia-topnav/index.html
+++ b/www/ia-topnav/index.html
@@ -3,8 +3,7 @@
 <script type="importmap">
   {
     "imports": {
-      "@internetarchive/ia-wayback-searchx": "https://esm.archive.org/@internetarchive/ia-wayback-search",
-      "@internetarchive/ia-wayback-search": "./ia-wayback-search/src/ia-wayback-search.js"
+      "@internetarchive/ia-wayback-search": "../ia-wayback-search/src/ia-wayback-search.js"
     }
   }
 </script>
