added new kebab icon. renamed subdir for consistency w/ related component names

--- a/packages/ia-icon/test/index.html
+++ b/packages/ia-icon/test/index.html
@@ -184,6 +184,15 @@
 
 
 <div>
+  &lt;ia-icon-kebab/&gt;
+  <hr>
+  <ia-icon-kebab></ia-icon-kebab>
+</div>
+<script type="module" src="../src/kebab.js"></script>
+
+
+
+<div>
   &lt;ia-icon-link/&gt;
   <hr>
   <ia-icon-link></ia-icon-link>
