ia-icon test page works in coderunr now

--- a/www/index.html
+++ b/www/index.html
@@ -1,4 +1,9 @@
 <h1>Testing Area</h1>
 
+<style>
+  a { display:block }
+</style>
+
 <a href="ia-topnav/">ia-topnav/</a>
+<a href="ia-icon/test">ia-icon/</a>
 <hr>
