--- a/packages/ia-activity-indicator/demo/index.html
+++ b/packages/ia-activity-indicator/demo/index.html
@@ -25,7 +25,7 @@
 
   <script type="module">
     import { html, render } from 'lit';
-    import '../ia-activity-indicator.js';
+    import '../index.js';
     import { IAActivityIndicatorMode } from '../index.js';
 
     let mode = IAActivityIndicatorMode.processing;
