complete full version of component

--- a/packages/ia-pic-uploader/demo/index.html
+++ b/packages/ia-pic-uploader/demo/index.html
@@ -28,9 +28,9 @@
 
     const iaPicUploader = document.querySelector('ia-pic-uploader');
 
-    iaPicUploader.previewImg = "" ;
     iaPicUploader.identifier = '@453344354534';
-    iaPicUploader.endpoint = 'https://archive.org/';
+    iaPicUploader.endpoint = 'http://localhost/index.php';
+    iaPicUploader.previewImg = "" ;
     iaPicUploader.type = 'full';
 
   </script>
