write test cases.

--- a/packages/ia-pic-uploader/demo/index.html
+++ b/packages/ia-pic-uploader/demo/index.html
@@ -54,7 +54,7 @@
     iaPicUploader.identifier = '@453344354534';
     iaPicUploader.endpoint = 'http://localhost/index.php';
     iaPicUploader.picture = './demo/default-preview.jpg' ;
-    iaPicUploader.type = 'full';
+    iaPicUploader.type = 'compact';
   </script>
 </body>
 </html>
