--- a/packages/ia-pic-uploader/demo/index.html
+++ b/packages/ia-pic-uploader/demo/index.html
@@ -46,13 +46,13 @@
       html`
         <div class="container">
           <div class="full">
-            <ia-pic-uploader id="full"></ia-pic-uploader>
+            <ia-pic-uploader lookingAtMyAccount id="full"></ia-pic-uploader>
           </div>
           <div class="compact">
             <button @click=${() => { document.dispatchEvent(new CustomEvent('saveProfileAvatar', {
               detail: { 'op': 'save it' }
             })) }}>Send Dummy Event</button>
-            <ia-pic-uploader id="compact"></ia-pic-uploader>
+            <ia-pic-uploader lookingAtMyAccount id="compact"></ia-pic-uploader>
           </div>
         <div>
 
@@ -63,18 +63,13 @@
     const iaPicFull = document.querySelector('#full');
 
     iaPicFull.identifier = '@453344354534';
-    iaPicFull.endpoint = 'http://localhost/index.php';
-    iaPicFull.lookingAtMyAccount = 'true' ;
+    // iaPicFull.lookingAtMyAccount = true;
     iaPicFull.picture = './demo/default-preview.jpg' ;
     iaPicFull.type = 'full';
 
     const iaPicCompact = document.querySelector('#compact');
-
     iaPicCompact.identifier = '@453344354534';
-    iaPicCompact.endpoint = 'http://localhost/index.php';
-    iaPicCompact.lookingAtMyAccount = 'true' ;
     iaPicCompact.picture = './demo/default-preview.jpg' ;
-    iaPicCompact.type = 'compact';
   </script>
 </body>
 </html>
