--- a/packages/ia-pic-uploader/demo/index.html
+++ b/packages/ia-pic-uploader/demo/index.html
@@ -33,6 +33,11 @@
       width: 100%;
       justify-content: center;
     }
+    
+    .full {
+      display: flex;
+      flex-direction: column;
+    }
   </style>
 </head>
 <body>
@@ -41,6 +46,10 @@
   <script type="module">
     import { html, render } from 'lit';
     import '../dist/src/ia-pic-uploader.js';
+    // <ia-pic-uploader lookingAtMyAccount type="full" picture = './demo/default-preview.jpg' id="full"></ia-pic-uploader>
+    // <ia-pic-uploader lookingAtMyAccount type="full" picture = './demo/image1.jpg' id="full"></ia-pic-uploader>
+    // <ia-pic-uploader lookingAtMyAccount type="full" picture = './demo/img1.jpg' id="full"></ia-pic-uploader>
+    // <ia-pic-uploader lookingAtMyAccount type="full" picture = './demo/img2.jpg' id="full"></ia-pic-uploader>
 
     render(
       html`
@@ -61,15 +70,14 @@
     );
 
     const iaPicFull = document.querySelector('#full');
-
     iaPicFull.identifier = '@453344354534';
-    // iaPicFull.lookingAtMyAccount = true;
-    iaPicFull.picture = './demo/default-preview.jpg' ;
+    iaPicFull.picture = '/demo/img2.jpg';
+    iaPicFull.endpoint = ''
     iaPicFull.type = 'full';
 
     const iaPicCompact = document.querySelector('#compact');
     iaPicCompact.identifier = '@453344354534';
-    iaPicCompact.picture = './demo/default-preview.jpg' ;
+    iaPicCompact.picture = '/demo/default-preview.jpg' ;
   </script>
 </body>
 </html>
