--- a/packages/ia-pic-uploader/demo/index.html
+++ b/packages/ia-pic-uploader/demo/index.html
@@ -47,8 +47,7 @@
     import { html, render } from 'lit';
     import '../dist/src/ia-pic-uploader.js';
     // <ia-pic-uploader lookingAtMyAccount type="full" picture = './demo/default-preview.jpg' id="full"></ia-pic-uploader>
-    // <ia-pic-uploader lookingAtMyAccount type="full" picture = './demo/image1.jpg' id="full"></ia-pic-uploader>
-    // <ia-pic-uploader lookingAtMyAccount type="full" picture = './demo/img1.jpg' id="full"></ia-pic-uploader>
+    // <ia-pic-uploader lookingAtMyAccount type="full" picture = './demo/image1.jpeg' id="full"></ia-pic-uploader>
     // <ia-pic-uploader lookingAtMyAccount type="full" picture = './demo/img2.jpg' id="full"></ia-pic-uploader>
 
     render(
