--- a/packages/ia-pic-uploader/demo/index.html
+++ b/packages/ia-pic-uploader/demo/index.html
@@ -32,11 +32,18 @@
       display: flex;
       width: 100%;
       justify-content: center;
+      flex-direction: column;
     }
     
     .full {
       display: flex;
       flex-direction: column;
+    }
+
+    .full, .compact {
+      padding: 50px;
+      border: 1px solid black;
+      margin: 20px;
     }
   </style>
 </head>
@@ -51,23 +58,21 @@
       html`
       <div class="container">
         <div class="full">
+          <h3>It will be used at My Uploads page</h3>
           <ia-pic-uploader lookingAtMyAccount id="full"></ia-pic-uploader>
-          </div>
-          <div class="compact">
-            <button @click=${() => { document.dispatchEvent(new CustomEvent('saveProfileAvatar', {
-              detail: { 'op': 'save it' }
-            })) }}>Send Dummy Event</button>
-            <ia-pic-uploader lookingAtMyAccount id="compact"></ia-pic-uploader>
-          </div>
-        <div>
-
+        </div>
+        <div class="compact">
+          <h3>It will be used at new account settings page</h3>
+          <ia-pic-uploader lookingAtMyAccount id="compact"></ia-pic-uploader>
+        </div>
+      <div>
       `,
       document.querySelector('#demo')
     );
 
     const iaPicFull = document.querySelector('#full');
     iaPicFull.identifier = '@453344354534';
-    iaPicFull.picture = '/demo/img2.jpg';
+    iaPicFull.picture = '/demo/default-preview.jpg';
     iaPicFull.endpoint = ''
     iaPicFull.type = 'full';
 
