--- a/packages/ia-pic-uploader/demo/index.html
+++ b/packages/ia-pic-uploader/demo/index.html
@@ -59,7 +59,7 @@
       <div class="container">
         <div class="full">
           <h3>It will be used at My Uploads page</h3>
-          <ia-pic-uploader lookingAtMyAccount id="full"></ia-pic-uploader>
+          <ia-pic-uploader lookingAtMyAccount maxFileSizeInMB=2 id="full"></ia-pic-uploader>
         </div>
         <div class="compact">
           <h3>It will be used at new account settings page</h3>
@@ -74,6 +74,7 @@
     iaPicFull.identifier = '@453344354534';
     iaPicFull.picture = '/demo/default-preview.jpg';
     iaPicFull.endpoint = ''
+    iaPicFull.validFileTypes = ['image/jpeg', 'image/png', 'image/gif'];
     iaPicFull.type = 'full';
 
     const iaPicCompact = document.querySelector('#compact');
