--- a/packages/ia-pic-uploader/demo/index.html
+++ b/packages/ia-pic-uploader/demo/index.html
@@ -20,6 +20,10 @@
       display: none;
     }
 
+    ia-pic-uploader {
+      --imgMaxHeight: 200px;
+      --imgMaxWidth: 200px;
+    }
     ia-pic-uploader:focus {
       outline: none;
     }
@@ -80,7 +84,7 @@
 
     const iaPicFull = document.querySelector('#full');
     iaPicFull.identifier = '@453344354534';
-    iaPicFull.picture = '/demo/default-preview.jpg';
+    iaPicFull.picture = '/demo/wider-image.jpg';
     iaPicFull.endpoint = ''
     iaPicFull.validFileTypes = ['image/jpeg', 'image/png', 'image/gif'];
     iaPicFull.type = 'full';
