3 more icons in use in the wild.  export all icons for top-level package import url option.  more test/demo pages, more dox.

--- a/ui/icon/test/all.html
+++ b/ui/icon/test/all.html
@@ -11,6 +11,7 @@
   }
 </style>
 <body>
+<script type="module" src="../src/index.js"></script>
 
 
 <div>
@@ -18,7 +19,6 @@
   <hr>
   <ia-icon-advance></ia-icon-advance>
 </div>
-<script type="module" src="../src/advance.js"></script>
 
 
 <div>
@@ -26,7 +26,6 @@
   <hr>
   <ia-icon-applepay></ia-icon-applepay>
 </div>
-<script type="module" src="../src/applepay.js"></script>
 
 
 <div>
@@ -34,7 +33,6 @@
   <hr>
   <ia-icon-audio></ia-icon-audio>
 </div>
-<script type="module" src="../src/audio.js"></script>
 
 
 <div>
@@ -42,7 +40,6 @@
   <hr>
   <ia-icon-calendar-blank></ia-icon-calendar-blank>
 </div>
-<script type="module" src="../src/calendar-blank.js"></script>
 
 
 <div>
@@ -50,7 +47,6 @@
   <hr>
   <ia-icon-calendar></ia-icon-calendar>
 </div>
-<script type="module" src="../src/calendar.js"></script>
 
 
 <div>
@@ -58,7 +54,6 @@
   <hr>
   <ia-icon-close-circle></ia-icon-close-circle>
 </div>
-<script type="module" src="../src/close-circle.js"></script>
 
 
 <div>
@@ -66,7 +61,6 @@
   <hr>
   <ia-icon-close></ia-icon-close>
 </div>
-<script type="module" src="../src/close.js"></script>
 
 
 <div>
@@ -74,7 +68,6 @@
   <hr>
   <ia-icon-collapse-sidebar></ia-icon-collapse-sidebar>
 </div>
-<script type="module" src="../src/collapse-sidebar.js"></script>
 
 
 <div>
@@ -82,7 +75,6 @@
   <hr>
   <ia-icon-contract></ia-icon-contract>
 </div>
-<script type="module" src="../src/contract.js"></script>
 
 
 <div>
@@ -90,7 +82,6 @@
   <hr>
   <ia-icon-credit-card></ia-icon-credit-card>
 </div>
-<script type="module" src="../src/credit-card.js"></script>
 
 
 <div>
@@ -98,7 +89,6 @@
   <hr>
   <ia-icon-dl></ia-icon-dl>
 </div>
-<script type="module" src="../src/dl.js"></script>
 
 
 <div>
@@ -106,7 +96,6 @@
   <hr>
   <ia-icon-donate></ia-icon-donate>
 </div>
-<script type="module" src="../src/donate.js"></script>
 
 
 <div>
@@ -114,7 +103,6 @@
   <hr>
   <ia-icon-edit-pencil></ia-icon-edit-pencil>
 </div>
-<script type="module" src="../src/edit-pencil.js"></script>
 
 
 <div>
@@ -122,7 +110,6 @@
   <hr>
   <ia-icon-ellipses></ia-icon-ellipses>
 </div>
-<script type="module" src="../src/ellipses.js"></script>
 
 
 <div>
@@ -130,7 +117,6 @@
   <hr>
   <ia-icon-email></ia-icon-email>
 </div>
-<script type="module" src="../src/email.js"></script>
 
 
 <div>
@@ -138,7 +124,6 @@
   <hr>
   <ia-icon-expand></ia-icon-expand>
 </div>
-<script type="module" src="../src/expand.js"></script>
 
 
 <div>
@@ -146,7 +131,6 @@
   <hr>
   <ia-icon-facebook></ia-icon-facebook>
 </div>
-<script type="module" src="../src/facebook.js"></script>
 
 
 <div>
@@ -154,7 +138,6 @@
   <hr>
   <ia-icon-googlepay></ia-icon-googlepay>
 </div>
-<script type="module" src="../src/googlepay.js"></script>
 
 
 <div>
@@ -162,7 +145,6 @@
   <hr>
   <ia-icon-ia-logo></ia-icon-ia-logo>
 </div>
-<script type="module" src="../src/ia-logo.js"></script>
 
 
 <div>
@@ -170,7 +152,6 @@
   <hr>
   <ia-icon-images></ia-icon-images>
 </div>
-<script type="module" src="../src/images.js"></script>
 
 
 <div>
@@ -178,7 +159,6 @@
   <hr>
   <ia-icon-info></ia-icon-info>
 </div>
-<script type="module" src="../src/info.js"></script>
 
 
 <div>
@@ -186,7 +166,6 @@
   <hr>
   <ia-icon-kebab></ia-icon-kebab>
 </div>
-<script type="module" src="../src/kebab.js"></script>
 
 
 <div>
@@ -194,7 +173,6 @@
   <hr>
   <ia-icon-link></ia-icon-link>
 </div>
-<script type="module" src="../src/link.js"></script>
 
 
 <div>
@@ -202,7 +180,6 @@
   <hr>
   <ia-icon-locale-pin></ia-icon-locale-pin>
 </div>
-<script type="module" src="../src/locale-pin.js"></script>
 
 
 <div>
@@ -210,7 +187,6 @@
   <hr>
   <ia-icon-lock></ia-icon-lock>
 </div>
-<script type="module" src="../src/lock.js"></script>
 
 
 <div>
@@ -218,7 +194,6 @@
   <hr>
   <ia-icon-magnify-minus></ia-icon-magnify-minus>
 </div>
-<script type="module" src="../src/magnify-minus.js"></script>
 
 
 <div>
@@ -226,7 +201,6 @@
   <hr>
   <ia-icon-magnify-plus></ia-icon-magnify-plus>
 </div>
-<script type="module" src="../src/magnify-plus.js"></script>
 
 
 <div>
@@ -234,7 +208,6 @@
   <hr>
   <ia-icon-paypal></ia-icon-paypal>
 </div>
-<script type="module" src="../src/paypal.js"></script>
 
 
 <div>
@@ -242,7 +215,6 @@
   <hr>
   <ia-icon-pinterest></ia-icon-pinterest>
 </div>
-<script type="module" src="../src/pinterest.js"></script>
 
 
 <div>
@@ -250,7 +222,6 @@
   <hr>
   <ia-icon-search></ia-icon-search>
 </div>
-<script type="module" src="../src/search.js"></script>
 
 
 <div>
@@ -258,7 +229,6 @@
   <hr>
   <ia-icon-share></ia-icon-share>
 </div>
-<script type="module" src="../src/share.js"></script>
 
 
 <div>
@@ -266,7 +236,6 @@
   <hr>
   <ia-icon-software></ia-icon-software>
 </div>
-<script type="module" src="../src/software.js"></script>
 
 
 <div>
@@ -274,7 +243,6 @@
   <hr>
   <ia-icon-sort-ascending></ia-icon-sort-ascending>
 </div>
-<script type="module" src="../src/sort-ascending.js"></script>
 
 
 <div>
@@ -282,7 +250,6 @@
   <hr>
   <ia-icon-sort-descending></ia-icon-sort-descending>
 </div>
-<script type="module" src="../src/sort-descending.js"></script>
 
 
 <div>
@@ -290,7 +257,6 @@
   <hr>
   <ia-icon-texts></ia-icon-texts>
 </div>
-<script type="module" src="../src/texts.js"></script>
 
 
 <div>
@@ -298,7 +264,6 @@
   <hr>
   <ia-icon-toc></ia-icon-toc>
 </div>
-<script type="module" src="../src/toc.js"></script>
 
 
 <div>
@@ -306,7 +271,6 @@
   <hr>
   <ia-icon-transcript></ia-icon-transcript>
 </div>
-<script type="module" src="../src/transcript.js"></script>
 
 
 <div>
@@ -314,7 +278,6 @@
   <hr>
   <ia-icon-tumblr></ia-icon-tumblr>
 </div>
-<script type="module" src="../src/tumblr.js"></script>
 
 
 <div>
@@ -322,7 +285,6 @@
   <hr>
   <ia-icon-twitter></ia-icon-twitter>
 </div>
-<script type="module" src="../src/twitter.js"></script>
 
 
 <div>
@@ -330,7 +292,6 @@
   <hr>
   <ia-icon-upload></ia-icon-upload>
 </div>
-<script type="module" src="../src/upload.js"></script>
 
 
 <div>
@@ -338,7 +299,6 @@
   <hr>
   <ia-icon-user></ia-icon-user>
 </div>
-<script type="module" src="../src/user.js"></script>
 
 
 <div>
@@ -346,7 +306,6 @@
   <hr>
   <ia-icon-venmo></ia-icon-venmo>
 </div>
-<script type="module" src="../src/venmo.js"></script>
 
 
 <div>
@@ -354,7 +313,6 @@
   <hr>
   <ia-icon-video></ia-icon-video>
 </div>
-<script type="module" src="../src/video.js"></script>
 
 
 <div>
@@ -362,7 +320,6 @@
   <hr>
   <ia-icon-visual-adjustment></ia-icon-visual-adjustment>
 </div>
-<script type="module" src="../src/visual-adjustment.js"></script>
 
 
 <div>
@@ -370,7 +327,6 @@
   <hr>
   <ia-icon-volumes></ia-icon-volumes>
 </div>
-<script type="module" src="../src/volumes.js"></script>
 
 
 <div>
@@ -378,4 +334,3 @@
   <hr>
   <ia-icon-web></ia-icon-web>
 </div>
-<script type="module" src="../src/web.js"></script>
