adjust so that no empty space on grid when hiding search icon for homepage + demo

--- a/www/ia-topnav/index.html
+++ b/www/ia-topnav/index.html
@@ -51,6 +51,15 @@
 </button>
 
 
+<hr>
+<button onclick="document.querySelector('ia-topnav').setAttribute('hideSearch', true)">
+  HIDE Top Row Search button, like on mobile
+</button>
+<button onclick="document.querySelector('ia-topnav').removeAttribute('hideSearch')">
+  SHOW Top Row Search button, like on mobile
+</button>
+
+
 
 <script type="module" src="./src/ia-topnav.js"></script>
 
