--- a/www/ia-topnav/index.html
+++ b/www/ia-topnav/index.html
@@ -1,5 +1,11 @@
 <link rel="stylesheet" href="https://archive.org/includes/build/css/archive.min.css">
-
+<style>
+  html {
+    font-size: 10px;
+    /* font-size: 15px; */
+    /* font-size: 25px; */
+  }
+</style>
 <script type="importmap">
   {
     "imports": {
