--- a/www/ia-topnav/index.html
+++ b/www/ia-topnav/index.html
@@ -2,7 +2,7 @@
 <style>
   html {
     font-size: 10px;
-    /* font-size: 15px; */
+    font-size: 10px;
     /* font-size: 25px; */
   }
 </style>
