Fixes px to rem issues on ia-wayback-search

--- a/www/index.html
+++ b/www/index.html
@@ -1,4 +1,9 @@
+<style>
+  a {
+    display: block;
+  }
+</style>
 <h1>Testing Area</h1>
-
-<a href="/ia-topnav/index.html">ia-topnav/</a>
+  <a href="/ia-topnav/index.html">ia-topnav/</a>
+  <a href="/ia-wayback-search/index.html">ia-wayback-search/</a>
 <hr>
