--- a/www/ia-topnav/index.html
+++ b/www/ia-topnav/index.html
@@ -8,7 +8,7 @@
   }
 </script>
 
-
+<a href="#maincontent" id="skip-to-main-content-link"><!--?lit$261864695$-->Skip to main content</a>
 <ia-topnav></ia-topnav>
 
 
